src/style.sass
$sidenotes-width: 20rem
$content-margin: 1rem
$content-width: 40rem
$navbar-width: 20rem

*
    box-sizing: border-box

:root
    --autocol-lightness: 65%
    --autocol-saturation: 85%
    --autocol-border: 0%

@font-face
    font-family: 'Titillium Web'
    font-style: normal
    font-weight: 400
    font-display: swap
    src: url(/assets/titillium-web.woff2) format('woff2')
    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD

@font-face
    font-family: 'Titillium Web'
    font-style: normal
    font-weight: 600
    font-display: swap
    src: url(/assets/titillium-web-semibold.woff2) format('woff2')
    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD

@font-face
    font-family: 'Iosevka'
    font-style: normal
    font-weight: 400
    font-display: swap
    src: url(/assets/iosevka.woff2) format('woff2')
    unicode-range: U+0000-00C0, U+A2-A9, U+AC-AE, U+00D7, U+00F7, U+FEFF, U+FFFD

$headers: "Iosevka", "Titillium Web", "Fira Sans", sans-serif
$monospace: "Iosevka", "Fira Code", monospace
$body: "Titillium Web", "Fira Sans", sans-serif

body
    margin: 0
    font-family: $body
    line-height: 1.5

.footnote-ref
    line-height: 1

pre, code, .deemph
    font-family: $monospace
    line-height: 1.3
    font-size: 0.95em

a
    text-decoration: none

.blog-post a, .sidenotes a
    text-decoration: underline

nav
    display: flex
    align-items: center

    padding: 1rem
    margin-bottom: 0.5em
    background: black
    overflow-x: auto
    font-size: 1.25em

    font-family: $headers

    .logo
        width: 1.5rem
        height: 1.5rem
        image-rendering: crisp-edges
        image-rendering: pixelated

    .logocont
        display: flex
        align-items: center
        font-style: italic
        color: white

    a, img, picture
        margin-right: 0.5em

    a
        margin-left: 0.5em

h1, h2, h3, h4, h5, h6
    margin: 0
    font-weight: 600
    font-family: $headers
    text-align: left
    a
        color: inherit
        text-decoration: none !important

summary h1, summary h2
    display: inline

// for easier viewing on big screen devices, narrow the width of text
// also make links a bit more distinct
main
    max-width: calc(100% - 2 * $content-margin)
    width: $content-width
    text-align: justify
    margin-left: $content-margin
    margin-right: $content-margin
    &.fullwidth
        width: calc($content-width + $sidenotes-width + -0.5 * $content-margin)
        margin-left: auto
        margin-right: auto
        padding-left: $content-margin
        padding-right: $content-margin

.blog, .experiments, .ring, .microblog
    margin-left: -1rem
    margin-right: -1rem
    margin-bottom: 0
    display: flex
    flex-wrap: wrap
    text-align: left

    > div
        min-width: 20em
        background: #eee
        padding: 12px
        flex: 1 1 20%

.microblog > div
    flex: 1 1 30%

ul
    list-style-type: square
    padding-left: 1em

.isso
    overflow-x: clip

button, select, input, textarea, .textarea
    border-radius: 0 !important
    border: 1px solid gray
    box-shadow: none !important

.achievements
    position: fixed
    bottom: 0
    left: 0
    .achievement
        cursor: pointer

.achievement
    border: 1px solid black
    margin: 0.5em
    padding: 0.5em
    max-width: 40em

    .title
        font-weight: 500
        font-family: $headers
    .conditions
        font-style: italic

.smallinfo
    font-size: 0.8em
    margin-top: 0.5em
    margin-bottom: 0.5em

.imbox
    display: flex
    img, picture
        padding-right: 1em
        width: 8em
        height: 8em
        margin-bottom: auto

.caption
    background: lightgray
    border: 1px solid black
    padding: 1em
    margin-bottom: 0.5em
    margin-top: 0.5em
    box-sizing: border-box
    > a
        display: block
    img, picture
        width: 100%
    p
        margin: 0

blockquote
    padding-left: 0.8rem
    border-left: 0.4rem solid black
    margin-left: 0.2rem

.wider
    > *
        width: calc(100vw - 2 * $content-margin)
        max-width: 80em
        min-width: calc(40rem - 2 * $content-margin)
    position: relative
    z-index: 1

.microblog p
    margin: 0

.sidenotes-container
    display: flex
    flex-wrap: wrap
.sidenotes
    width: $sidenotes-width
    min-width: $sidenotes-width
    padding-left: 1.5rem
    position: relative
    p
        margin: 0

.footnotes-sep
    display: none
.footnotes-list
    text-align: justify
@media (max-width: calc(4 * $content-margin + $content-width + $sidenotes-width))
    // minwidth 1-pane layout
    .sidenotes
        min-width: auto
        width: auto
        max-width: $content-width
        padding: 0
        margin-left: $content-margin
        margin-right: $content-margin
    .footnotes-sep
        display: block
    .sidenotes-container
        display: block
    table
        display: block
        overflow-x: scroll

@media (min-width: calc(4 * $content-margin + $content-width + $sidenotes-width + $navbar-width))
    // fullwidth 3-pane layout
    body
        display: flex
    .nav-container
        flex-grow: 1
    nav
        display: block
        > a, .logocont
            display: block
            margin-right: 0
        width: $navbar-width
        font-size: 1.5em
        text-align: right
        margin-bottom: 0
        box-sizing: border-box
        top: 0
        position: sticky
        margin-left: auto
        overflow-x: auto
    .sidenotes-container
        flex-grow: 1
    main.fullwidth
        margin-left: $content-margin
        margin-right: $content-margin
    .wider
        > *
            width: calc(100vw - 2 * $content-margin - $navbar-width)
            max-width: 80em
            min-width: calc(40rem - 2 * $content-margin - $navbar-width)

$hl-border: 3px
.footnote-item.hl1, .footnote-item.hl2
    border-top: solid $hl-border orange
    border-bottom: solid $hl-border orange
    margin-top: -$hl-border

@media (prefers-color-scheme: dark)
    body
        background: black
        color: white

    nav
        background: #333

    .ring .art
        background: #444

    .achievement
        color: black

    a
        color: lightblue
        &:visited
            color: #e17701

    .caption
        background: #333

    :root
        --autocol-lightness: 10%
        --autocol-saturation: 50%
        --autocol-border: 35%

    nav .logocont
        color: white

    blockquote
        border-left: 0.8rem solid white

    button, select, input, textarea, .textarea
        background: #333
        color: white

.sidenotes img, .footnotes img
    width: 100%
    max-width: 15em
    display: block

.sidenotes img.big
    max-width: 30em

.hoverdefn
    text-decoration-style: dotted
    text-decoration-line: underline

.section-header
    margin-top: 0.5em

table
    border-collapse: collapse
    td, th
        border: 1px solid gray
        padding: 0.4em
    th
        white-space: nowrap

.epigraph
    position: relative
    padding-left: 3rem
    padding-right: 3rem
    padding-top: 1rem
    padding-bottom: 1rem

    > div
        font-style: italic

    .attribution
        text-indent: 2rem
        text-align: right
        font-style: normal

    > div::after
        content: "\201D"
        right: 0rem
        bottom: 0rem

    > div::before
        content: "\201C"
        left: 0rem
        top: 0rem

    > div::before, > div::after
        display: block
        position: absolute
        font-size: 2.5em

// TODO
#comments-wrapper textarea
    width: calc(100% - 0.5em) !important

.next
    text-align: right

.buttons .button
    margin: 0.2em

.search-overlay
    overscroll-behavior: contain
    position: fixed
    overflow: scroll
    top: 0
    left: 0
    bottom: 0
    right: 0
    background: rgba(0, 0, 0, 0.9)
    padding: 2em
    color: white
    z-index: 1000
    input
        margin: 0.5rem
        font-size: 1.5em
        border: 4px solid green
    a
        color: white
    .search-results
        width: 100%
        max-width: $content-width
        .search-result
            padding: 0.5em
            margin: 0.5em
            .description
                font-style: italic

.autocol
    margin: 4px
    .title
        font-size: 1.1em
        font-family: $headers
        font-weight: 600

#citebox
    width: 100%

textarea.squiggle
    width: 100%

.emphasis
    margin-top: 16px
    margin-bottom: 16px
    padding: 16px
    p
        margin: 0

@media print
    .isso
        display: none

    .sidenotes
        display: block
        li
            position: static !important

    .cite-this-post
        display: none

    img
        max-width: 60% !important

    nav
        display: none

.large-button
    padding: 0.5em

.squiggle-control
    text-wrap: wrap

